fixed sticky navbar and overflow component

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -106,12 +106,12 @@
 
 .bottomblur{
   position: absolute;
-  width:70vw;
+  width:60vw;
   height:50vw;
-  min-width:250px;
+  min-width:220px;
   min-height:350px;
-  top:246px;
-  right:-25vw;
+  top:346px;
+  right:-30px;
   border-radius:764px;
   background: rgba(25, 55, 109, 0.7);
   filter:blur(100px);
